# showcampy

./: pyproject.toml
src/showcampy/: __main__.py
