[project]
name = "showcampy"
version = "0.0.3"
description = "showcampy"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["showcampy", "download", "rip"]

authors = [
  {name = "MrArgparse", email = "-@-.org" }
]

maintainers = [
  {name = "MrArgparse", email = "-@-.org" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "beautifulsoup4",
  "fake_useragent",
  "msgspec",
  "mutagen",
  "platformdirs",
  "requests",
  "rich",
  "tomlkit"
]

[project.scripts]
showcampy = "showcampy.__main__:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"